fix: increase line-height to avoid clipping letters like g/y

--- a/src/app/components/project-view/project-section/task/task.component.css
+++ b/src/app/components/project-view/project-section/task/task.component.css
@@ -78,6 +78,7 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         user-select: none;
+        line-height: 1.3;
 
 
         &.completed {
